Make EMBED_DIM configurable via environment variable

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # OLLAMA_HOST=localhost:11434
 # MNEME_DB=mneme.db
 # EMBED_MODEL=qwen3-embedding:0.6b
+# EMBED_DIM=1024
 # USER_ALIAS=User
 # ASSISTANT_ALIAS=Assistant
 # MNEME_ALIASES=
